[add]　ファイル追加
追加ファイル
・check.js
・add_data.php
「entry01.php」に使用するファイルです。

--- a/include/header.html
+++ b/include/header.html
@@ -1,6 +1,9 @@
 <header>
-    <h1>社員名簿システム</h1>
-    <h2>新規社員登録画面</h2>
-    <a href="./index.php">トップ画面</a>
-    <a href="./entry01.php">新規社員登録へ</a>
+    <table border="0" style="width:100%">
+      <tr>
+        <td>社員名簿システム</td>
+        <td>|<a href="../system/index.php">トップ画面</a> | <a href="../system/entry01.php">新規社員登録へ</a> | </td>
+      </tr>
+    </table>
+    <hr>
 </header>
