--- a/include/header.html
+++ b/include/header.html
@@ -1,8 +1,9 @@
-<header>
-    <table border="0" style="width:100%">
-        <tr>
-            <td class="h_title">社員名簿システム</td>
-            <td class="h_menu"><a href="../system/index.php" class="btn">TOP</a><a href="../system/entry01.php" class="btn">新規社員登録</a></td>
-        </tr>
-    </table>
-</header>
+    <header>
+        <h1><a class="h_title" href="../system/index.php">社員名簿システム</a></h1>
+        <nav>
+            <ul class="demo2">
+                <li><a class="h_menu" href="../system/index.php">TOP画面</a></li>
+                <li><a class="h_menu" href="../system/entry01.php">新規社員登録</a></li>
+            </ul>
+        </nav>
+    </header>
