--- a/include/style.css
+++ b/include/style.css
@@ -1,39 +1,58 @@
-@charset "UTF-8";
+* {
+   box-sizing: border-box;
+}
 body{
-    background-color: white;
-    font-family: "Open Sans", sans-serif;
-    font-size: 18px;
-    margin: 0 auto !important;
-    color: #444;
-    max-width: 1200px;
+    margin:0;
+    padding: 0;
+    font-family:"Hiragino Kaku Gothic Pro","ヒラギノ角互 Pro W3", メイリオ, Meiryo, "ＭＳ Ｐゴシック", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    background-color: #FEFCFB;
+    margin: 100px 0 0 0;
 }
+
 header{
-    /*background:#4C7582;*/
-}
-.h_title {
-    font-size: xx-large;
-    font-weight: bold;
-    vertical-align: bottom;
-    height: 80px;
-}
-.h_menu{
-  /*background:#1b1b2b;*/
-  padding:25px;
-  text-align: right;
-  font-family: 'Oswald', sans-serif;
-  vertical-align: bottom;
-}
-
-.btn{
-  color:#000;
-  background:#4C7582;
-  padding:7px 20px;
-  font-size:12px;
-  text-decoration:none;
-  letter-spacing:2px;
-}
-
-.search{
+    width: 100%;
+    padding: 20px 4% 0px;
+    background-color: #DCE0E0;
+    position: fixed;
+    top: 0;
     display: flex;
-    justify-content: center;
+    align-items: center;
+}
+h1{
+    maegin: 0;
+    padding: 0;
+    font-size: 20px;
+}
+.h_title{
+    text-decoration: none;
+    color: #4b4b4b;
+}
+
+.h_menu{
+    text-decoration: none;
+    color: #4b4b4b;
+}
+ul{
+    list-style: none;
+    margin: 0;
+    display: flex;
+}
+li{
+    margin: 0 0 0 15px;
+    font-size: 14px;
+}
+nav{
+    margin: 0 0 0 auto;
+}
+.search{
+    width: 50%;
+    margin: 0 auto;
+    padding: 10px 40px;
+    margin-bottom: 10px;
+}
+.index_output{
+    width: 50%;
+    margin: 0 auto;
+    padding: 10px 40px;
+    margin-bottom: 10px;
 }
