--- a/include/style.css
+++ b/include/style.css
@@ -51,10 +51,13 @@ nav{
 }
 /*検索フォーム*/
 .search{
+    /*background: #999;*/
     width: 80%;
-    margin: 0 auto;
+    margin: 0 280px;
     padding: 10px 40px;
     margin-bottom: 10px;
+    display: flex;
+    align-items: center;
 }
 .search td{
     color: #4b4b4b;
@@ -75,12 +78,12 @@ nav{
 }
 
 .btn_style:hover {
-  color: #4b4b4b;
+  color: #FEFCFB;
   background: #d0e0d9;
 }
 .table{
-    /*background: #888;*/
-    margin: 0 0 0 220px;
+    /*background: #D2B1AA;*/
+    margin: 0 150px;
 }
 
 /*
@@ -88,7 +91,7 @@ nav{
 */
 .output{
     /*background: #999;*/
-    width: 60%;
+    width: 80%;
     margin: 0 auto;
     padding: 10px 40px;
 }
@@ -107,8 +110,3 @@ nav{
   background-color: #d0e0d9;
   /*width: 30%;*/
 }
-/*
-index
-*/
-.in_out_res{
-    color: #4b4b4b;
