--- a/include/style.css
+++ b/include/style.css
@@ -51,14 +51,10 @@ nav{
 }
 /*検索フォーム*/
 .search{
-    /*background: #999;*/
-    width: 70%;
-    margin-left: auto;
-    margin-right: auto;
+    width: 50%;
+    margin: 0 auto;
     padding: 10px 40px;
     margin-bottom: 10px;
-    display: flex;
-    /*align-items: center;*/
 }
 .search td{
     color: #4b4b4b;
@@ -72,21 +68,19 @@ nav{
     margin: 10px 0 0 0;
 }
 .btn_style {
-  border: 1.5px solid #95ACB9;
+  border: 1.5px solid #d0e0d9;
   border-radius: 0;
   background: #FEFCFB;
   color: #4b4b4b;
-  width: 75px;
-  padding: 3px;
 }
 
 .btn_style:hover {
-  color: #FEFCFB;
-  background: #95ACB9;
+  color: #4b4b4b;
+  background: #d0e0d9;
 }
 .table{
-    /*background: #D2B1AA;*/
-    margin: 0 150px;
+    /*background: #888;*/
+    margin: 0 0 0 220px;
 }
 
 /*
@@ -94,13 +88,13 @@ nav{
 */
 .output{
     /*background: #999;*/
-    width: 70%;
+    width: 60%;
     margin: 0 auto;
-    padding: 10px 50px;
+    padding: 10px 40px;
 }
 #tbl-bdr table,#tbl-bdr td,#tbl-bdr th {
     border-collapse: collapse;
-    border:1px solid #95ACB9;
+    border:1px solid #d0e0d9;
     padding: 4px 12px;
     color: #4b4b4b;
 }
@@ -110,6 +104,11 @@ nav{
 }
 
 #tbl-bdr th {
-  background-color: #95ACB9;
+  background-color: #d0e0d9;
   /*width: 30%;*/
 }
+/*
+index
+*/
+.in_out_res{
+    color: #4b4b4b;
