--- a/include/style.css
+++ b/include/style.css
@@ -55,6 +55,8 @@ nav{
     margin: 0 auto;
     padding: 10px 40px;
     margin-bottom: 10px;
+    display: flex;
+    align-items: center;
 }
 .search td{
     color: #4b4b4b;
