--- a/include/style.css
+++ b/include/style.css
@@ -51,12 +51,10 @@ nav{
 }
 /*検索フォーム*/
 .search{
-    width: 70%;
-    margin: 0 auto;
-    padding: 10px 40px;
-    margin-bottom: 10px;
-    display: flex;
+    /*background: #999;*/
     align-items: center;
+    margin: 10px auto;
+
 }
 .search td{
     color: #4b4b4b;
@@ -67,11 +65,11 @@ nav{
 .btn{
     /*background: #111;*/
     text-align: center;
-    margin: 10px 0 0 0;
+    margin: 10px 0;
 }
+
 .btn_style {
   border: 1.5px solid #d0e0d9;
-  border-radius: 0;
   background: #FEFCFB;
   color: #4b4b4b;
 }
@@ -80,9 +78,10 @@ nav{
   color: #4b4b4b;
   background: #d0e0d9;
 }
+
 .table{
-    /*background: #888;*/
-    margin: 0 0 0 220px;
+    /*background: #ACA3DE;*/
+    margin: 0 auto;
 }
 
 /*
@@ -109,8 +108,3 @@ nav{
   background-color: #d0e0d9;
   /*width: 30%;*/
 }
-/*
-index
-*/
-.in_out_res{
-    color: #4b4b4b;
