[delete] cssの不必要なコードをコメント削除しました。

--- a/include/style.css
+++ b/include/style.css
@@ -52,7 +52,7 @@ nav{
 /*検索フォーム*/
 .search{
     /*background: #999;*/
-    align-items: center;
+    /*align-items: center;*/
     margin: 10px auto;
 
 }
