[update] アイコン追加

--- a/include/header.html
+++ b/include/header.html
@@ -1,5 +1,5 @@
     <header>
-        <h1><a class="h_title" href="../system/index.php">社員名簿システム</a></h1>
+        <h1><img class="icon" src="../img/icon2.png" width = 25px><a class="h_title" href="../system/index.php"> 社員名簿システム</a></h1>
         <nav>
             <ul class="demo2">
                 <li><a class="h_menu" href="../system/index.php">TOP画面</a></li>
